[package]
name = "rust-tradier"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
futures-util = "0.3.30"
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["io-util", "rt", "macros"] }
# tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }

