[package]
name = "rust-tradier"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
chrono-tz = "0.10"
futures-util = "0.3.30"
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.115"
anyhow = "1.0.86"
tokio = { version = "1.37.0", features = ["io-util", "rt", "macros", "rt-multi-thread"] }
tokio-util = "0.7.10"
cached = { version = "0.51.0", features = ["async"] }
# tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
